<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C20" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/color_main_bg"
                android:paddingTop="5dp" >

                <RelativeLayout
                    android:id="@+id/rl_search_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/song_serch_bg" >

                    <TextView
                        android:id="@+id/tv_search_song"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/song_search_icon"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text=" 搜索歌星或歌曲"
                        android:textColor="#9799A2"
                        android:textColorHint="#9799A2"
                        android:textSize="@dimen/text_design_26px" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1C1C20"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <LinearLayout
                    android:id="@+id/ll_singers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/song_singer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/title_singger"
                        android:textColor="#9799A2"
                        android:textSize="@dimen/text_design_26px" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_languages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/song_language" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/title_langue"
                        android:textColor="#9799A2"
                        android:textSize="@dimen/text_design_26px" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_types"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/song_classification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/title_type"
                        android:textColor="#9799A2"
                        android:textSize="@dimen/text_design_26px" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_new_songs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/song_new" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/title_new_song"
                        android:textColor="#9799A2"
                        android:textSize="@dimen/text_design_26px" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_tops"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/song_hot" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/title_top"
                        android:textColor="#9799A2"
                        android:textSize="@dimen/text_design_26px" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/listview_divider" />

            <RelativeLayout
                android:id="@+id/rl_demand_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#1C1C20"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/song_title_color_bg"
                    android:text="大家都在唱"
                    android:textColor="#9799A1"
                    android:textSize="@dimen/text_design_26px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="更多 >"
                    android:textColor="@color/text_color_song_singleName"
                    android:textSize="@dimen/text_design_26px" />
            </RelativeLayout>

            <cn.com.ethank.yunge.view.MyListView
                android:id="@+id/lv_top_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1C1C20"
                android:divider="@color/listview_divider"
                android:dividerHeight="1dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >
            </cn.com.ethank.yunge.view.MyListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/listview_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="#1C1C20"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:drawableLeft="@drawable/song_title_color_bg"
                    android:gravity="center"
                    android:text="推荐专题"
                    android:textColor="#9799A1"
                    android:textSize="@dimen/text_design_26px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="17sp" />
            </RelativeLayout>

            <cn.com.ethank.yunge.view.MyGridView
                android:id="@+id/mgv_main_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1C1C20"
                android:horizontalSpacing="15dp"
                android:listSelector="#00ffffff"
                android:numColumns="2"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:verticalSpacing="15dp" >
            </cn.com.ethank.yunge.view.MyGridView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#ff6600"
                    android:orientation="vertical" >

                    <include layout="@layout/item_song" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#ff6600" >

                    <include layout="@layout/item_song" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#ff6600" >

                    <include layout="@layout/item_song" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#ff6600" >

                    <include layout="@layout/item_song" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1C1C20"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/ll_ktv_hot_song"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/u33"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="KTV热歌榜"
                            android:textColor="@color/text_color_namal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_ktv_new_song"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/u35"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="KTV新歌榜"
                            android:textColor="@color/text_color_namal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/ll_ktv_hot_chorus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/u37"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="KTV热门合唱"
                            android:textColor="@color/text_color_namal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_ktv_hot_demand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/u39"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="KTV必点歌曲榜"
                            android:textColor="@color/text_color_namal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>